Add latest changes
- Improve overall scroll speed
- Prepare for Sticky Headers
- Disable parallel GC (causes problems wih gradle)
- Initial bottom bar for Media View
   * Added sharing functionality
   * Added deleting functionality
- Remove unused dependencies (me.onebone:toolbar-compose)

...

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
     <string name="header_today">Today</string>
     <string name="header_yesterday">Yesterday</string>
+    <string name="share_media">Share</string>
+    <string name="request_permissions">Request permissions</string>
 </resources>
