Push latest changes
- Add multiselect media in PhotosScreen
- Improve MediaViewScreen
- Improve PhotosScreen speed and updating speed
- Code clean-up
etc

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="filter_nameAZ">Name (A-Z)</string>
     <string name="filter_nameZA">Name (Z-A)</string>
     <string name="filter_old">Old</string>
+    <string name="selected_s">Selected %s</string>
+    <string name="trash">Trash</string>
 </resources>
