--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,21 @@
     <string name="trash">Trash</string>
     <string name="pause_video">Pause video</string>
     <string name="play_video">Play video</string>
+    <string name="favorites">Favorites</string>
+    <string name="no_media_title">Seems empty here</string>
+    <string name="no_media_cd">No media found</string>
+    <string name="empty_trash_title">Squeaky Clean</string>
+    <string name="empty_trash_cd">Trash is empty</string>
+    <string name="error_title">Something went wrong :(</string>
+    <string name="error_cd">An error occurred</string>
+    <string name="copy_error">Copy error</string>
+    <string name="trash_restore">Restore</string>
+    <string name="trash_empty">Empty</string>
+    <string name="trash_delete">Delete</string>
+    <string name="nav_library">Library</string>
+    <string name="share">Share</string>
+    <string name="info">Info</string>
+    <string name="remove_selected">Remove selected</string>
+    <string name="remove_all">Remove all</string>
+    <string name="empty_favorites_title">You have no favorites</string>
 </resources>
