Media Info: Add initial implementation of modal bottom sheet
Initial implementation for the modal bottom sheet inside MediaViewScreen to show Media Metadata

Also simplify AppBar and BottomBar inside Standalone and Normal MediaViewScreen to reduce code duplication

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,12 @@
     <string name="remove_selected">Remove selected</string>
     <string name="remove_all">Remove all</string>
     <string name="empty_favorites_title">You have no favorites</string>
+    <string name="label">Label</string>
+    <string name="path">Path</string>
+    <string name="date">Date</string>
+    <string name="iso">" • ISO"</string>
+    <string name="kb">KB</string>
+    <string name="mb">MB</string>
+    <string name="gb">GB</string>
+    <string name="metadata">Metadata</string>
 </resources>
