Media: Improve overall logic and move MediaStore API parsing to background
- Improve MediaRepositoryImpl logic by including the contentFlowObserver inside and reducing code duplication
- Improve ViewModel handling in navigation
- Delete useless viewmodels for Favorites and Trash
- Move MediaStore API to background thread (suspend methods)
- Refactor PhotosViewModel to MediaViewModel since it's going to supply all types of Media
- Remove contentFlowObservers from ViewModels since the logic is moved to Repository - having them in viewmodels also breaks the Clean Architecture pattern
- Remove useless calls to ViewModel via LaunchedEffect causing multiple useless calls to Repository to get the data
- Use MediaStore.createFavoriteRequest in favor of manual contentResolver updates
- Decrease minSdk to 32
- etc

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="select_all">Select all</string>
     <string name="unselect_all">Unselect all</string>
     <string name="drop_down_cd">Drop down</string>
+    <string name="cancel">Cancel</string>
 </resources>
