--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,12 @@
     <string name="unselect_all">Unselect all</string>
     <string name="drop_down_cd">Drop down</string>
     <string name="cancel">Cancel</string>
+    <string name="back_cd">Back</string>
+    <string name="settings_title">Settings</string>
+    <string name="reset_settings">Reset Settings</string>
+    <string name="settings_general">General</string>
+    <string name="settings_trash_title">Use trash can</string>
+    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
+    <string name="settings_about_app_title">About Gallery</string>
+    <string name="settings_about_app_summary">Version %s</string>
 </resources>
