--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
     <string name="settings_about_app_title">About Gallery</string>
     <string name="settings_about_app_summary">Version %s</string>
+    <string name="move_album_to_trash">Move album to trash</string>
 </resources>
