--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,11 @@
     <string name="settings_about_app_title">About Gallery</string>
     <string name="settings_about_app_summary">Version %s</string>
     <string name="move_album_to_trash">Move album to trash</string>
+    <string name="pinned_albums_title">Pinned Albums</string>
+    <string name="unpin">Unpin</string>
+    <string name="pin">Pin</string>
+    <plurals name="item_count">
+        <item quantity="one">%s item</item>
+        <item quantity="other">%s items</item>
+    </plurals>
 </resources>
