New Crowdin updates (#32)
* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Spanish)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Galician)

* New translations strings.xml (Spanish)

* New translations strings.xml (Galician)

* New translations strings.xml (Turkish)

* New translations strings.xml (Romanian)

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -1,57 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_photos">Photos</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="nav_library">Library</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="app_name">Galería</string>
+    <string name="nav_photos">Fotos</string>
+    <string name="nav_albums">Álbumes</string>
+    <string name="searchbar_title"><![CDATA[Buscar fotos y vídeos]]></string>
+    <string name="header_today">Hoy</string>
+    <string name="header_yesterday">Ayer</string>
+    <string name="share_media">Compartir</string>
+    <string name="request_permissions">Solicitar permisos</string>
+    <string name="filter">Filtrar</string>
+    <string name="filter_recent">Reciente</string>
+    <string name="filter_nameAZ">Por nombre (A-Z)</string>
+    <string name="filter_nameZA">Por nombre (Z-A)</string>
+    <string name="filter_old">Antiguo</string>
+    <string name="selected_s">Selección: %s</string>
+    <string name="trash">Papelera</string>
+    <string name="pause_video">Pausar vídeo</string>
+    <string name="play_video">Reproducir vídeo</string>
+    <string name="favorites">Favoritos</string>
+    <string name="no_media_title">Parece que no hay nada</string>
+    <string name="no_media_cd">No se ha encontrado ningún archivo</string>
+    <string name="empty_trash_title">Completamente limpio</string>
+    <string name="empty_trash_cd">La papelera está vacía</string>
+    <string name="error_title">Algo salió mal :(</string>
+    <string name="error_cd">Se ha producido un error</string>
+    <string name="copy_error">Error al copiar</string>
+    <string name="trash_restore">Restaurar</string>
+    <string name="trash_empty">Vaciar</string>
+    <string name="trash_delete">Eliminar</string>
+    <string name="nav_library">Biblioteca</string>
+    <string name="share">Compartir</string>
+    <string name="info">Información</string>
+    <string name="remove_selected">Eliminar seleccionados</string>
+    <string name="remove_all">Eliminar todo</string>
+    <string name="empty_favorites_title">No tienes favoritos</string>
+    <string name="label">Etiqueta</string>
+    <string name="path">Ruta</string>
+    <string name="date">Fecha</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="cancel">Cancel</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
+    <string name="metadata">Metadatos</string>
+    <string name="select_all">Seleccionar todo</string>
+    <string name="unselect_all">Deseleccionar todo</string>
+    <string name="drop_down_cd">Desplegable</string>
+    <string name="cancel">Cancelar</string>
+    <string name="back_cd">Atrás</string>
+    <string name="settings_title">Ajustes</string>
+    <string name="reset_settings">Restablecer ajustes</string>
     <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
+    <string name="settings_trash_title">Utilizar la papelera</string>
+    <string name="settings_trash_summary">Almacena los archivos borrados durante 30 días.\nSi la opción está desactivada, los archivos se eliminarán permanentemente.</string>
+    <string name="settings_about_app_title">Sobre Galería</string>
+    <string name="settings_about_app_summary">Versión %s</string>
+    <string name="move_album_to_trash">Mover álbum a la papelera</string>
+    <string name="pinned_albums_title">Álbumes fijados</string>
+    <string name="unpin">Desfijar</string>
+    <string name="pin">Fijar</string>
+    <plurals name="item_count">
+        <item quantity="one">%s Ítem</item>
+        <item quantity="other">%s Ítems</item>
+    </plurals>
 </resources>
