--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -1,57 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_photos">Photos</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
+    <string name="app_name">Galeri</string>
+    <string name="nav_photos">Fotoğraflar</string>
+    <string name="nav_albums">Albümler</string>
+    <string name="searchbar_title"><![CDATA[Fotoğraf ve videoları arayın]]></string>
+    <string name="header_today">Bugün</string>
+    <string name="header_yesterday">Dün</string>
+    <string name="share_media">Paylaş</string>
+    <string name="request_permissions">İzin talep et</string>
+    <string name="filter">Filtre</string>
+    <string name="filter_recent">Yakın zamanda</string>
+    <string name="filter_nameAZ">İsim (A-Z)</string>
+    <string name="filter_nameZA">İsim (Z-A)</string>
+    <string name="filter_old">Eski</string>
     <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="nav_library">Library</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
+    <string name="trash">Çöp kutusu</string>
+    <string name="pause_video">Videoyu durdur</string>
+    <string name="play_video">Video oynat</string>
+    <string name="favorites">Favoriler</string>
+    <string name="no_media_title">Burası boş görünüyor</string>
+    <string name="no_media_cd">Medya bulunamadı</string>
+    <string name="empty_trash_title">Tertemiz</string>
+    <string name="empty_trash_cd">Çöp kutusu boş</string>
+    <string name="error_title">Bir şeyler ters gitti :(</string>
+    <string name="error_cd">Bir hata oluştu</string>
+    <string name="copy_error">Hatayı kopyala</string>
+    <string name="trash_restore">Geri yükle</string>
+    <string name="trash_empty">Boş</string>
+    <string name="trash_delete">Sil</string>
+    <string name="nav_library">Kütüphane</string>
+    <string name="share">Paylaş</string>
+    <string name="info">Bilgi</string>
     <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="remove_all">Tümünü kaldır</string>
+    <string name="empty_favorites_title">Hiç favoriniz yok</string>
+    <string name="label">Etiket</string>
+    <string name="path">Yol</string>
+    <string name="date">Tarih</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
+    <string name="metadata">Üstveri</string>
+    <string name="select_all">Tümünü seç</string>
+    <string name="unselect_all">Tümünün seçimini kaldır</string>
     <string name="drop_down_cd">Drop down</string>
-    <string name="cancel">Cancel</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
+    <string name="cancel">İptal et</string>
+    <string name="back_cd">Geri</string>
+    <string name="settings_title">Ayarlar</string>
+    <string name="reset_settings">Ayarları Sıfırla</string>
+    <string name="settings_general">Genel</string>
+    <string name="settings_trash_title">Çöp kutusu kullan</string>
+    <string name="settings_trash_summary">Silinen medya 30 gün boyunca saklanır.\nOrtam silme işlemi devre dışı bırakılırsa kalıcı bir kayba neden olur.</string>
+    <string name="settings_about_app_title">Galeri Hakkında</string>
+    <string name="settings_about_app_summary">Sürüm %s</string>
+    <string name="move_album_to_trash">Albümü çöp kutusuna taşı</string>
+    <string name="pinned_albums_title">Sabitlenmiş Albümler</string>
+    <string name="unpin">Sabitlemeyi kaldır</string>
+    <string name="pin">Sabitle</string>
+    <plurals name="item_count">
+        <item quantity="one">%s item</item>
+        <item quantity="other">%s items</item>
+    </plurals>
 </resources>
