MediaInfo: Improve BottomSheet UI
- Redesign
- Prepare for adding more items like 'Edit', 'Use as' etc in the bottom sheet
- Show location if possible

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,9 @@
     <string name="unpin">Unpin</string>
     <string name="pin">Pin</string>
     <string name="nav_timeline">Timeline</string>
+    <string name="location">Location</string>
+    <string name="location_cd">Media Location</string>
+    <string name="media_location" translatable="false">@string/location_cd</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
