New Crowdin updates (#38)
* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Turkish)

* New translations strings.xml (Italian)

* New translations strings.xml (Italian)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Galician)

* New translations strings.xml (Romanian)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Ara

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -1,63 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_photos">Photos</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
+    <string name="app_name">Galleria</string>
+    <string name="nav_photos">Foto</string>
+    <string name="nav_albums">Album</string>
+    <string name="searchbar_title"><![CDATA[Cerca foto e video]]></string>
+    <string name="header_today">Oggi</string>
+    <string name="header_yesterday">Ieri</string>
+    <string name="share_media">Condividi</string>
     <string name="request_permissions">Request permissions</string>
     <string name="filter">Filter</string>
     <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
+    <string name="filter_nameAZ">Nome (A-Z)</string>
+    <string name="filter_nameZA">Nome (Z-A)</string>
     <string name="filter_old">Old</string>
     <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
+    <string name="trash">Cestino</string>
     <string name="pause_video">Pause video</string>
     <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
+    <string name="favorites">Preferiti</string>
     <string name="no_media_title">Seems empty here</string>
     <string name="no_media_cd">No media found</string>
     <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
+    <string name="empty_trash_cd">Il cestino è vuoto</string>
+    <string name="error_title">Qualcosa è andato storto :(</string>
+    <string name="error_cd">Si è verificato un errore</string>
     <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
+    <string name="trash_restore">Ripristina</string>
+    <string name="trash_empty">Vuoto</string>
+    <string name="trash_delete">Elimina</string>
     <string name="nav_library">Library</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
+    <string name="share">Condividi</string>
+    <string name="info">Informazioni</string>
     <string name="remove_selected">Remove selected</string>
     <string name="remove_all">Remove all</string>
     <string name="empty_favorites_title">You have no favorites</string>
     <string name="label">Label</string>
     <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="date">Data</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
+    <string name="metadata">Metadati</string>
+    <string name="select_all">Seleziona tutto</string>
+    <string name="unselect_all">Deseleziona tutto</string>
     <string name="drop_down_cd">Drop down</string>
-    <string name="cancel">Cancel</string>
+    <string name="cancel">Annulla</string>
     <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
+    <string name="settings_title">Impostazioni</string>
+    <string name="reset_settings">Ripristina impostazioni</string>
     <string name="settings_general">General</string>
     <string name="settings_trash_title">Use trash can</string>
     <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
     <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
+    <string name="settings_about_app_summary">Versione %s</string>
+    <string name="move_album_to_trash">Sposta l\'album nel cestino</string>
     <string name="pinned_albums_title">Pinned Albums</string>
     <string name="unpin">Unpin</string>
     <string name="pin">Pin</string>
+    <string name="nav_timeline">Timeline</string>
+    <string name="location">Location</string>
+    <string name="location_cd">Media Location</string>
+    <string name="no_internet">Internet is not available</string>
+    <string name="location_map_cd">Location Map</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
