--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,64 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_photos">Photos</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="nav_library">Library</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="app_name">相簿</string>
+    <string name="nav_photos">圖片</string>
+    <string name="nav_albums">相簿</string>
+    <string name="searchbar_title"><![CDATA[搜尋照片和影片]]></string>
+    <string name="header_today">今天</string>
+    <string name="header_yesterday">昨天</string>
+    <string name="share_media">分享</string>
+    <string name="request_permissions">請求權限</string>
+    <string name="filter">篩選</string>
+    <string name="filter_recent">最近的</string>
+    <string name="filter_nameAZ">名稱 (A-Z)</string>
+    <string name="filter_nameZA">名稱 (Z-A)</string>
+    <string name="filter_old">舊的</string>
+    <string name="selected_s">%s 已選取</string>
+    <string name="trash">垃圾桶</string>
+    <string name="pause_video">暫停影片</string>
+    <string name="play_video">撥放影片</string>
+    <string name="favorites">我的最愛</string>
+    <string name="no_media_title">這裡似乎是空的</string>
+    <string name="no_media_cd">未找到任何媒體檔案</string>
+    <string name="empty_trash_title">一塵不染</string>
+    <string name="empty_trash_cd">垃圾桶已清空</string>
+    <string name="error_title">出現問題了 QQ</string>
+    <string name="error_cd">發生錯誤</string>
+    <string name="copy_error">複製錯誤</string>
+    <string name="trash_restore">還原</string>
+    <string name="trash_empty">清空</string>
+    <string name="trash_delete">刪除</string>
+    <string name="nav_library">檔案庫</string>
+    <string name="share">分享</string>
+    <string name="info">詳細資訊</string>
+    <string name="remove_selected">移除已選取項目</string>
+    <string name="remove_all">全部移除</string>
+    <string name="empty_favorites_title">我的最愛目前沒有內容</string>
+    <string name="label">標籤</string>
+    <string name="path">路徑</string>
+    <string name="date">日期</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="cancel">Cancel</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
+    <string name="metadata">相關資訊</string>
+    <string name="select_all">選擇全部</string>
+    <string name="unselect_all">取消全選</string>
+    <string name="drop_down_cd">下拉選單</string>
+    <string name="cancel">取消</string>
+    <string name="back_cd">返回</string>
+    <string name="settings_title">設定</string>
+    <string name="reset_settings">重設設定</string>
+    <string name="settings_general">一般</string>
+    <string name="settings_trash_title">使用垃圾桶</string>
+    <string name="settings_trash_summary">存儲已刪除的媒體文件 30 天。\n如果禁用此功能，刪除媒體文件將永久丟失。</string>
+    <string name="settings_about_app_title">關於相簿</string>
+    <string name="settings_about_app_summary">版本 %s</string>
+    <string name="move_album_to_trash">將相簿移到垃圾桶</string>
+    <string name="pinned_albums_title">固定相簿</string>
+    <string name="unpin">取消固定</string>
+    <string name="pin">固定</string>
+    <string name="nav_timeline">Timeline</string>
+    <string name="location">Location</string>
+    <string name="location_cd">Media Location</string>
+    <string name="no_internet">Internet is not available</string>
+    <string name="location_map_cd">Location Map</string>
     <plurals name="item_count">
-        <item quantity="other">%s items</item>
+        <item quantity="other">%s 個項目</item>
     </plurals>
 </resources>
